--- a/payment.html
+++ b/payment.html
@@ -227,15 +227,15 @@
                 <div id="newCardInfo" class="hidden">
                     <div class="form-group">
                         <label>Card Number</label>
-                        <input type="text" id="cardNumber" placeholder="Card Number">
+                        <input type="text" id="cardNumber" name="cardNumber" placeholder="Card Number">
                     </div>
                     <div class="form-group">
                         <label>Expiry Date</label>
-                        <input type="text" id="expiryDate" placeholder="MM / YY">
+                        <input type="text" id="expiryDate" name="expiryDate" placeholder="MM / YY">
                     </div>
                     <div class="form-group">
                         <label>CVV/CVC2</label>
-                        <input type="text" id="cvv" placeholder="CVC">
+                        <input type="text" id="cvv" name="cvv" placeholder="CVC">
                     </div>
                 </div>
 
