--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="status">
                 <div class="unpaid">Unpaid</div>
                 <div class="due-date">Due Date: 13th Aug 2024</div>
-                <a href="payment.html" class="pay-now">Pay Now</a>
+                <a href="payment-invoice3332223939-u38982833-i8282-gfdui33.html" class="pay-now">Pay Now</a>
             </div>
         </div>
         <div class="main-image">
